syntax = "proto3";

option csharp_namespace = "StockMarket.Protos";

package stock_market;

service StockPrice {
  rpc GetStockPrice (StockRequest) returns (StockResponse);
}

message StockRequest {
  string symbol = 1;
}

message StockResponse {
  string symbol = 1;
  double price = 2;
  int64 timestamp = 3;
}
